# rjvm

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: check.yml
examples/: decoding.rs  instrcfg.rs  instructions.rs  printelements.rs
examples/testdata/org/example/: Simple.java
src/: lib.rs
src/bytecode/: attributes.rs  descriptors.rs  mod.rs  pool.rs
src/bytecode/reader/: attributes.rs  constants.rs  containers.rs  mod.rs  reader.rs
src/decoder/: attributes.rs  buffer.rs  class_file.rs  constants.rs  descriptors.rs  error.rs  fields.rs  instructions.rs  methods.rs  mod.rs
src/types/: attributes.rs  constants.rs  descriptors.rs  elements.rs  flags.rs  instructions.rs  mod.rs
