[package]
name = "rjvm"
version = "0.1.0"
authors = ["Andreas Diepenbrock"]
categories = ["parser-implementations"]
repository = "https://github.com/adiepenbrock/rjvm"
edition = "2021"
license = "MIT"
keywords = ["jvm", "java"]

[dependencies]
bitflags = "2.4.2"

[features]
default = ["decoder"]
decoder = []

[[example]]
name = "decoding"
required-features = ["decoder"]
doc-scrape-examples = true
