[package]
name = "rjvm"
version = "0.2.0"
authors = ["Andreas Diepenbrock"]
description = "Parse JVM class files with Rust"
categories = ["parser-implementations"]
repository = "https://github.com/adiepenbrock/rjvm"
edition = "2021"
license = "MIT"
keywords = ["jvm", "java"]

[dependencies]
bitflags = "2.4.2"

[features]
default = ["decoder"]
decoder = []

[[example]]
name = "decoding"
required-features = ["decoder"]
doc-scrape-examples = true

[[example]]
name = "instructions"
required-features = ["decoder"]
doc-scrape-examples = true

[[example]]
name = "printelements"
required-features = ["decoder"]
doc-scrape-examples = true
