[package]
name = "rjvm"
version = "0.3.0"
authors = ["Andreas Diepenbrock"]
description = "Parse JVM class files with Rust"
categories = ["parser-implementations"]
repository = "https://github.com/adiepenbrock/rjvm"
edition = "2021"
license = "MIT"
keywords = ["jvm", "java"]

[dependencies]
bitflags = "2.5.0"
thiserror = "1.0.61"

[features]
default = ["decoder"]
decoder = []

[[example]]
name = "decoding"
required-features = ["decoder"]
doc-scrape-examples = true

[[example]]
name = "instructions"
required-features = ["decoder"]
doc-scrape-examples = true

[[example]]
name = "printelements"
required-features = ["decoder"]
doc-scrape-examples = true

[[example]]
name = "instrcfg"
required-features = ["decoder"]
doc-scrape-examples = true


